Fix spacing and size

--- a/src/app/components/star-rating/star-rating.component.scss
+++ b/src/app/components/star-rating/star-rating.component.scss
@@ -2,13 +2,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 24px;
+  font-size: 35px;
 }
 
 .star-rating span {
   color: #ccc;
   cursor: pointer;
-  margin: 0 3px;
+  margin: 0 10px;
 }
 
 .star-rating span.selected {
